--- a/index.html
+++ b/index.html
@@ -59,9 +59,24 @@
             <ul>
                 <li><a href="home_post.html" target="content-frame">Home</a></li>
                 <li><a href="Datatypes.html" target="content-frame">Datatypes</a></li>
-                <li><a href="Objects.html" target="content-frame">Objects</a></li>
+                <li><a href="Objects.html" target="content-frame">Types of Objects</a></li>
                 <li><a href="CharacterSets.html" target="content-frame">Character Sets</a></li>
-                <li><a href="FunctionAndProcedure.html" target="content-frame">Function And Procedure</a></li>
+                <li><a href="ACID.html" target="content-frame">ACID Properties></li>
+				<li><a href="undovsredo.html" target="content-frame">Undo Vs Redo</a></li>
+				<li><a href="mostusedfunctioninoracle.html" target="content-frame">Most used functions in oracle</a></li>
+				<li><a href="OraclePatchingType.html" target="content-frame">Oracle Patch Type</a></li>
+				<li><a href="datapatchuses.html" target="content-frame">Datapatch use</a></li>
+				<li><a href="AWSASHADDM.html" target="content-frame">AWS ASH ADDM uses</a></li>
+				<li><a href="OraclePatchingType.html" target="content-frame">Oracle Patch Type</a></li>
+				<li><a href="SGAandPGAuse.html" target="content-frame">SGA and PGA use</a></li>
+				<li><a href="TypesofStandby.html" target="content-frame">Types of Standby</a></li>
+				<li><a href="RMANBACKUPTYPE.html" target="content-frame">RMAN BACKUP TYPES</a></li>
+				<li><a href="TDEinOracle.html" target="content-frame">TDE in Oracle</a></li>
+				<li><a href="VIEWvsMVIEW.html" target="content-frame">VIEW vs MVIEW</a></li>
+				<li><a href="OracleDatabaseprerequisites.html" target="content-frame">Oracle Database prerequisites</a></li>
+				<li><a href="Semaphores.html" target="content-frame">Semaphores</a></li>
+				<li><a href="WorkInProgress.html" target="content-frame">WorkInProgress...</a></li>
+				 
             </ul>
         </aside>
 
@@ -72,15 +87,15 @@
         <aside class="sidebar right">
             <h2>Some Extras</h2>
             <ul>
-                <li><a href="FunctionAndProcedure.html" target="content-frame">Post 4</a></li>
-                <li><a href="doc1.htm" target="content-frame">Post 5</a></li>
-                <li><a href="post6.html" target="content-frame">Post 6</a></li>
+                <li><a href="WorkInProgress.html" target="content-frame">WorkInProgress...</a></li>
+				<li><a href="WorkInProgress.html" target="content-frame">WorkInProgress...</a></li>
+				<li><a href="WorkInProgress.html" target="content-frame">WorkInProgress...</a></li>
             </ul>
         </aside>
     </div>
     
     <footer>
-        <p>Contact: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p>Contact: <a href=" ">Work in progres	</a></p>
     </footer>
 
     <script>
