--- a/home_post.html
+++ b/home_post.html
@@ -3,125 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post 1</title>
+    <title>Oracle DBA Blog</title>
     <style>
         body {
-            padding: 20px;
-			text-align: center;
-            font-family: Arial, sans-serif;
-            opacity: 0; /* Start invisible */
-            transition: opacity 1s ease-in-out; /* Fade-in effect */
-        }
-
-        h2 {
+            font-family: 'Arial', sans-serif;
+            background-color: #f9f9f9;
             color: #333;
-            transform: translateY(-20px); /* Start slightly above */
-            opacity: 0; /* Start invisible */
-            transition: transform 0.5s ease, opacity 0.5s ease; /* Slide-in effect */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+            overflow: hidden;
         }
-
-        p {
-            line-height: 1.6;
+        h1 {
+            color: #FFA500; /* Oracle orange */
+            font-size: 3rem;
+            margin-bottom: 20px;
+            animation: bounce 1s infinite; /* Bouncing effect */
+        }
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+            40% { transform: translateY(-100px); }
+            60% { transform: translateY(-10px); }
+        }
+        .dynamic-line {
+            font-size: 1.5rem;
+            color: #007ACC; /* Blue color */
+            margin: 10px 0;
+            animation: fadeIn 4s infinite alternate, bounce 1s infinite;
+        }
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+        .tech-blog {
+            font-size: 1.2rem;
             color: #555;
-            transform: translateY(20px); /* Start slightly below */
-            opacity: 0; /* Start invisible */
-            transition: transform 0.5s ease, opacity 0.5s ease; /* Slide-in effect */
+            margin-top: 10px;
+            animation: slideIn 2s infinite alternate, pulse 1.5s infinite;
         }
-
-        /* Running Words */
-        .running-words {
-            white-space: nowrap; /* Prevent text wrapping */
-            overflow: hidden; /* Hide overflow */
-            box-sizing: border-box; /* Include padding in width */
-            animation: marquee 10s linear infinite; /* Animation */
-            font-weight: bold; /* Make text bold */
-            color: #d35400; /* Change color if needed */
-            margin-bottom: 20px; /* Space below running words */
+        @keyframes slideIn {
+            0% { transform: translateY(20px); opacity: 0; }
+            100% { transform: translateY(0); opacity: 1; }
         }
-
-        @keyframes marquee {
-            0% {
-                transform: translateX(100%); /* Start off-screen right */
-            }
-            100% {
-                transform: translateX(-100%); /* End off-screen left */
-            }
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
         }
-
-        /* Rotating Words */
-        .rotating-words {
-            display: inline-block; /* Allow rotation effect */
-            font-weight: bold; /* Make text bold */
-            color: #2980b9; /* Change color if needed */
-            font-size: 24px; /* Increase font size */
-            animation: rotate 5s infinite; /* Rotation effect */
+        .footer {
+            margin-top: 30px;
+            font-size: 0.9rem;
+            color: #888;
+            animation: fadeInUp 2s infinite alternate;
         }
-
-        @keyframes rotate {
-            0% { transform: rotate(0deg); }
-            25% { transform: rotate(90deg); }
-            50% { transform: rotate(180deg); }
-            75% { transform: rotate(270deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        /* When the body is loaded, make it visible */
-        body.loaded {
-            opacity: 1;
-        }
-
-        body.loaded h2 {
-            transform: translateY(0);
-            opacity: 1; /* Fade in */
-        }
-
-        body.loaded p {
-            transform: translateY(0);
-            opacity: 1; /* Fade in */
+        @keyframes fadeInUp {
+            0% { transform: translateY(10px); opacity: 0; }
+            100% { transform: translateY(0); opacity: 1; }
         }
     </style>
 </head>
 <body>
-    <h2>DBA workers ...................</h2>
-    <div class="running-words">
-       backup is important,   backup is important
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-    
-    </div>
-	
-    <div class="rotating-words">
-        DBA are workers
-       <p> Kaam karo "Kaam" </p>
 
- </div>
+<h1>Oracle DBA Blog</h1>
+<div class="dynamic-line">Many basic questions are resolved here.</div>
+<div class="tech-blog">Your go-to place for Oracle tips and tricks!</div>
 
- <div class="running-words">
-       backup is important,   backup is important
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-		<p>Backup !!!! Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!Backup !!!!</p>
-    
-    </div>
+<div class="footer">
+    &copy; 2024 Oracle DBA Community. All rights reserved.
+</div>
 
-    <script>
-        // Add the 'loaded' class to trigger the fade-in effect
-        window.onload = function() {
-            document.body.classList.add('loaded');
-        };
-    </script>
 </body>
 </html>
